# mashz

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
scripts/: build_fasta_hsx.py  mpggb
src/: mashz.cpp
src/align/include/: align_parameters.hpp  align_types.hpp  computeAlignments.hpp  parseCmdArgs.hpp
src/common/: ALeS.cpp  ALeS.hpp  hsx.cpp  seqiter.hpp
src/common/lastz/: CMakeLists.txt
src/common/lastz/src/: align_diffs.c  axt.c  capsule.c  chain.c  cigar.c  coverage_dist.c  dna_utilities.c  dna_utilities.h  gapped_extend.c  genpaf.c  lastz.c  lastz.h  maf.c  masking.c  output.h  sam.c  seed_search.c  segment.c  sequences.c  text_align.c  tweener.c
src/lastz/: CMakeLists.txt  Makefile  README.md
src/lastz/src/: sequences.h
src/map/include/: commonFunc.hpp  computeMap.hpp  map_parameters.hpp  parseCmdArgs.hpp  winSketch.hpp
src/yeet/: yeet_main.cpp
src/yeet/include/: parse_args.hpp  temp_file.hpp
